# Kana-Bot

./: .replit  README.md  main.py  pyproject.toml  run.py  settings.py
extensions/: admin.py  economy.py  greetings.py
