[tool.poetry]
name = "basic-discord-bot"
version = "0.1.0"
description = "Basic discord bot using discord.py combining snippets and features from tutorials, replits and the discord.py docs"
authors = ["bk62"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.1.0"
flask = "^2.0.1"
python-dotenv = "^0.17.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
